Fix misplaced validation tip in tableview; show invalid data warnings

Table View:

*Fixed misplaced 'Date/Time data error' validation popup in tableview
BUG:282295

*Show warning when invalid date values in tables and forms are rejected
BUG:299867

*Clicking validation popup editor is focus again allowing to correct the value
*Use new message widget for validation popups

REVIEW:105906